# streamlit_informs

./: .pre-commit-config.yaml  data.csv  frontpage.py  messages.csv  pyproject.toml
pages/: montecarlo.py
