[project]
name = "streamlit-informs-demo"
version = "0.1.0"
description = "A demo app for Streamlit for Informs"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "matplotlib>=3.10.1",
  "mypy>=1.15",
  "numpy>=2.2.5",
  "pandas>=2.2.3",
  "pre-commit>=4.2",
  "seaborn>=0.13.2",
  "streamlit>=1.44.1",
]
